tests/paczka1/fuzzy1/13075824.err
Error in line 6: bg8ayBAkdq7 A515 12,1
Error in line 8: m8Fv8J S371 6,96
Error in line 7: bg8ayBAkdq7 S371 68,5
Error in line 21: Al3 A234 91,8
Error in line 25: NXZQZS1 A234 70,8
Error in line 5: XVaR0gFs A234 19,7
Error in line 26: Al3 A515 10,8
Error in line 30: XVaR0gFs A515 89,3
Error in line 33: XVaR0gFs A234 16,3
